# talkshow

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  PROJECT.md  README.md  docker-compose.yaml  main.py  package.json  pyproject.toml  requirements.txt
.github/workflows/: cve-scan.yml  release.yml  sbom.yml  test.yml
app/: config.py
app/plugins/: base.py  loader.py
app/plugins/outputs/: twilio_xml.py
app/plugins/sources/: wordpress.py
app/plugins/tts/: azure_tts.py
app/routes/: outputs.py  plugins.py  sources.py  tts.py
legacy/undercurrent/: .gitignore  package.json
legacy/undercurrent/src/: curl_fetch.js
mappings/: feeds.json
src/: articles.js
src/talkshow/: main.py
src/talkshow/plugins/: base.py  loader.py
src/talkshow/plugins/sources/: rss.py  rss_extractors.yaml  wordpress.py
src/talkshow/plugins/tts/: azure_tts.py  espeak_tts.py
src/talkshow/routes/: plugins.py  tts.py
tests/: test_config.py  test_espeak_tts.py  test_http_api.py  test_plugin_loader.py  test_plugins_base.py  test_rss_source.py
